@@ -245,8 +245,8 @@ class VehicleUnsavedTest < Test::Unit::TestCase
     assert !@vehicle.can_park?
   end
   
-  def test_should_not_have_a_next_transition_for_park
-    assert_nil @vehicle.next_park_transition
+  def test_should_not_have_a_transition_for_park
+    assert_nil @vehicle.park_transition
   end
   
   def test_should_not_allow_park
@@ -257,8 +257,8 @@ class VehicleUnsavedTest < Test::Unit::TestCase
     assert @vehicle.can_ignite?
   end
   
-  def test_should_have_a_next_transition_for_ignite
-    transition = @vehicle.next_ignite_transition
+  def test_should_have_a_transition_for_ignite
+    transition = @vehicle.ignite_transition
     assert_not_nil transition
     assert_equal 'parked', transition.from
     assert_equal 'idling', transition.to
